--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Three.js Editor",
-  "short_name": "Three.js",
+  "name": "open annotater",
+  "short_name": "open annotater",
   "start_url": ".",
   "scope": ".",
   "display": "standalone",
